k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookiestore-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookiestore
  template:
    metadata:
      labels:
        app: cookiestore
    spec:
      securityContext:
        runAsUser: 1002
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
        supplementalGroups:
          - 1000
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: cookiestore-container
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          image: mtr.devops.telekom.de/caas/cookiestore:0.0.1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - all
          resources:
            limits:
              memory: "650Mi"
              cpu: "500m"
            requests:
              memory: "650Mi"
              cpu: "250m"
