k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookiestore-ingress
spec:
  rules:
    - host: cookies.caas-t21.telekom.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cookiestore-service
                port:
                  number: 8080
